--- a/test-rule.html
+++ b/test-rule.html
@@ -19,9 +19,17 @@
     <title>Test Rule Results | Rule Builder | EOP</title>
     <style>
       /* BS Overrides */
+            /* font ramp adjust */
+            label { 
+        font-size: .88rem;
+        margin-bottom: .25rem;
+      }
       a {
+        font-size: .88rem;
         color: #3673a3;
       }
+      /* end font ramp adjust */
+    
       .btn-primary {
         background-color: #3673a3;
         border-color: #3673a3;
