--- a/edit-rule.html
+++ b/edit-rule.html
@@ -19,9 +19,16 @@
 
     <style>
       /* BS Overrides */
+      /* font ramp adjust */
+      label { 
+        font-size: .88rem;
+        margin-bottom: .25rem;
+      }
       a {
+        font-size: .88rem;
         color: #3673a3;
       }
+      /* end font ramp adjust */
       .btn-primary {
         background-color: #3673a3;
         border-color: #3673a3;
@@ -68,6 +75,24 @@
       .icon-arrow-down {
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='10.349' viewBox='0 0 12 10.349'%3E%3Cdefs%3E%3Cstyle%3E.a{fill:%233673a3;}%3C/style%3E%3C/defs%3E%3Cpath class='a' d='M28.791,35h2.883a.719.719,0,0,1,.721.721v2.9h3.117a.721.721,0,0,1,.51,1.231l-5.279,5.285a.721.721,0,0,1-1.021,0l-5.276-5.285a.722.722,0,0,1,.51-1.231h3.114v-2.9A.719.719,0,0,1,28.791,35Z' transform='translate(-24.234 -35)'/%3E%3C/svg%3E");
       }
+      .icon-disclosure {
+      background-image: url("data:image/svg+xml,%3Csvg class='bi bi-chevron-right' width='1em' height='1em' viewBox='0 0 16 16' fill='currentColor' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+    }
+    .icon--append {
+      background-repeat: no-repeat;
+      background-position: right .25rem center;
+      padding-right:1.5rem;
+    }
+
+    .icon--prepend {
+      background-repeat: no-repeat;
+      background-position: left .2rem center;
+      padding-left:1.5rem;
+    }
+
+    .icon-disclosure.collapsed {
+      background-image: url("data:image/svg+xml,%3Csvg class='bi bi-chevron-down' width='1em' height='1em' viewBox='0 0 16 16' fill='currentColor' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+    }
 
       /* @UI remove unneeded rules here */
       .list-rule-definitions,
@@ -244,7 +269,7 @@
 
               <div class="form-group col text-right">
                 <button
-                  class="btn btn-outline-primary"
+                  class="btn btn-outline-primary icon-disclosure icon--append collapsed"
                   type="button"
                   data-toggle="collapse"
                   data-target="#collapseExample"
@@ -419,33 +444,18 @@
             </div>
 
             <div class="form-row">
+
               <div class="form-group col-auto">
-                <div class="btn-group">
-                  <button
-                    type="button"
-                    class="btn btn-outline-primary dropdown-toggle"
-                    data-toggle="dropdown"
-                    aria-haspopup="true"
-                    aria-expanded="false"
-                  >
-                    Group
-                  </button>
-                  <div class="dropdown-menu">
-                    <label class="dropdown-item" data-value="1"
-                      >Option 1
-                      <input id="X" class="" type="checkbox" data-value="1"
-                    /></label>
-                    <!--   <div class="dropdown-item"><label for="WW">Another action</label><input id="WW" type="checkbox"></div> -->
-                    <label class="dropdown-item" data-value="2"
-                      >Option 2 <input type="checkbox" data-value="2"
-                    /></label>
-                    <div class="dropdown-divider"></div>
-                    <label class="dropdown-item" data-value="3"
-                      >Option 3 <em>(Separated link)</em>
-                      <input type="checkbox" data-value="3"
-                    /></label>
-                  </div>
-                </div>
+                <button
+                  class="btn btn-outline-primary icon-disclosure icon--append collapsed"
+                  type="button"
+                  data-toggle="collapse"
+                  data-target="#collapseExample-2"
+                  aria-expanded="false"
+                  aria-controls="collapseExample-2"
+                >
+                  Group
+                </button>
               </div>
 
               <div class="form-group col-5">
@@ -468,6 +478,62 @@
                 </div>
               </div>
             </div>
+
+            <div class="collapse mb-3" id="collapseExample-2" >
+              <div class="card card-body bg-light">
+                <!-- ROW --------------------------------------- -->
+                <section class="form-row align-items-top">
+                  
+                  <div class="col">
+                    <h5 class="sr-only">Options for Group</h5>
+
+                    <div class="custom-control custom-checkbox">
+                      <input type="checkbox" class="custom-control-input" id="customCheck1">
+                      <label class="custom-control-label" for="customCheck1">Baseline</label>
+                  </div>
+                    <div class="custom-control custom-checkbox"> 
+                      <input type="checkbox" class="custom-control-input" id="customCheck2">
+                      <label class="custom-control-label" for="customCheck2">Edit rule has an associated excel report</label>
+                    </div>
+                    <div class="custom-control custom-checkbox"> 
+                      <input type="checkbox" class="custom-control-input" id="customCheck3">
+                      <label class="custom-control-label" for="customCheck3">Mid-Session</label>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="custom-control custom-checkbox">
+                      <input type="checkbox" class="custom-control-input" id="customCheck4">
+                      <label class="custom-control-label" for="customCheck4">Budget Session</label>
+                  </div>
+                    <div class="custom-control custom-checkbox"> 
+                      <input type="checkbox" class="custom-control-input" id="customCheck5">
+                      <label class="custom-control-label" for="customCheck5">Edit rule has online Help</label>
+                    </div>
+                    <div class="custom-control custom-checkbox"> 
+                      <input type="checkbox" class="custom-control-input" id="customCheck6">
+                      <label class="custom-control-label" for="customCheck6">Restricted Exclusions. Must be for specific lines.</label>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="custom-control custom-checkbox">
+                      <input type="checkbox" class="custom-control-input" id="customCheck7">
+                      <label class="custom-control-label" for="customCheck7">Credit</label>
+                  </div>
+                    <div class="custom-control custom-checkbox"> 
+                      <input type="checkbox" class="custom-control-input" id="customCheck8">
+                      <label class="custom-control-label" for="customCheck8">Facts || related</label>
+                    </div>
+                    <div class="custom-control custom-checkbox"> 
+                      <input type="checkbox" class="custom-control-input" id="customCheck9">
+                      <label class="custom-control-label" for="customCheck9">Restricted Exclusions. Only admin users can suppress these rules</label>
+                    </div>
+                  </div>
+                  </section>
+                  </div>
+                  </div>
+
+
+
 
             <table class="table table-sm table-hover table-rule-definitions">
               <thead>
