508: fixed ID and For attributes, added skiplinks

--- a/header-site.html
+++ b/header-site.html
@@ -6,7 +6,7 @@
   crossorigin="anonymous"
 />
 
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-dark bg-dark" aria-label="primary">
   <a class="navbar-brand" href="index.html">
     <img
       src="assets/images/seal-eop--sm.png"
@@ -46,14 +46,14 @@
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Some Link Here 1</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="#">Some Link Here 2</a>
       </li>
     </ul>
     <span class="navbar-text">
-      Navbar text with an inline element
+      Navbar text
     </span>
   </div>
 </nav>
