--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@ a { color: #3673A3; }
           <main id="main-content">
 
      
-
-           <a href="https://xd.adobe.com/view/8d66689d-d859-498e-5a1c-e417bb667adc-fb57/?fullscreen">Rule Builder prototype</a>
-            <p>Password: EOPvision2020</p>
+<p>Based on designs from <a href="https://xd.adobe.com/view/8d66689d-d859-498e-5a1c-e417bb667adc-fb57/?fullscreen">Rule Builder prototype</a></p>
+           
+            <!-- <p>Password: EOPvision2020</p> -->
 
             <h2>Mock-up Index</h2>
 
