--- a/test-rule.html
+++ b/test-rule.html
@@ -67,11 +67,11 @@
       <div class="row">
         <div class="col">
           <header>
-            <h2>Test Rule Results</h2>
-            <dl class="row no-gutters">
+            <h2>Test Rule - 9901-0</h2>
+            <!-- <dl class="row no-gutters">
               <dt class="col-auto mr-1">Rule Number:</dt>
               <dd class="col">DATAGEN 9901-0</dd>
-            </dl>
+            </dl> -->
           </header>
         </div>
         <div class="col">
@@ -89,36 +89,36 @@
             <form>
               <div class="form-row align-items-end">
                 <div class="form-group col-md-2">
-                  <label for="inputCity">Agency</label>
-                  <input type="text" class="form-control" id="inputCity" />
+                  <label for="agency1">Agency</label>
+                  <input type="text" class="form-control" id="agency1" />
                 </div>
                 <div class="form-group col-md-2">
-                  <label for="inputState">Bureau</label>
-                  <input type="text" class="form-control" id="inputCity" />
+                  <label for="bureau1">Bureau</label>
+                  <input type="text" class="form-control" id="bureau1" />
                 </div>
                 <div class="form-group col-md-2">
-                  <label for="inputZip">Account</label>
-                  <input type="text" class="form-control" id="inputZip" />
+                  <label for="account1">Account</label>
+                  <input type="text" class="form-control" id="account1" />
                 </div>
                 <div class="form-group col-md-2">
-                  <label for="inputZip">Transmit</label>
-                  <input type="text" class="form-control" id="inputZip" />
+                  <label for="transmit1">Transmit</label>
+                  <input type="text" class="form-control" id="transmit1" />
                 </div>
                 <div class="col-auto">
                   <button type="submit" class="btn btn-primary mb-3">
-                    Test
+                    Test 
                   </button>
                 </div>
               </div>
 
               <div class="form-row">
                 <div class="form-group col">
-                  <label for="validationTextarea"
+                  <label for="resultsTextarea1"
                     >Results (using the PB2020 exercise)</label
                   >
                   <textarea
                     class="form-control is-invalid"
-                    id="validationTextarea"
+                    id="resultsTextarea1"
                     rows="4"
                   ></textarea>
                   <div class="invalid-feedback">
@@ -129,10 +129,10 @@
 
               <div class="form-row">
                 <div class="form-group col">
-                  <label for="validationTextarea">Drools Rule</label>
+                  <label for="droolsTextarea1">Drools Rule</label>
                   <textarea
                     class="form-control"
-                    id="validationTextarea"
+                    id="droolsTextarea1"
                     rows="5"
                   ></textarea>
                 </div>
