--- a/footer-site.html
+++ b/footer-site.html
@@ -6,7 +6,7 @@
   crossorigin="anonymous"
 />
 
-<div class="container">
+<div class="container" id="site-footer">
   <hr />
   <div class="row justify-content-between">
     <div class="col">
