--- a/landing.html
+++ b/landing.html
@@ -112,7 +112,10 @@
                   <label for="ruleType1">Rule Type</label>
                   <select id="ruleType1" class="form-control">
                     <option>Choose...</option>
-                    <option selected>Lock Rules</option>
+                    <option>Sequester Rules</option>
+                    <option>Lock Rules</option>
+                    <option>Edit Rules</option>
+                    <option>Data Generation Rules</option>
                   </select>
                 </div>
 
@@ -125,6 +128,8 @@
                   >
                     <option>Choose...</option>
                     <option selected>All Rule Groups</option>
+                    <option>Baseline Outyear Rules (BLOY)</option>
+                    <option>Data generation rules for which the order of execution is not material. (Anytime)</option>
                   </select>
                 </div>
 
@@ -226,7 +231,7 @@
                         <span aria-hidden="true">#</span
                         ><span class="sr-only">Number</span>
                       </th>
-                      <th scope="col">Error Message</th>
+                      <th scope="col">Description</th>
                       <th scope="col">Sal</th>
                       <th scope="col">Edit</th>
                       <th scope="col">On/Off</th>
