508: added more A11y enhancements, skiplink styles

--- a/footer-site.html
+++ b/footer-site.html
@@ -6,7 +6,7 @@
   crossorigin="anonymous"
 />
 
-<div class="container" id="site-footer">
+<div class="container site-footer" id="site-footer">
   <hr />
   <div class="row justify-content-between">
     <div class="col">
