--- a/header-site.html
+++ b/header-site.html
@@ -5,6 +5,10 @@
   integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
   crossorigin="anonymous"
 />
+<!-- @Developer: add this style to header component -->
+<style>
+  .site-header { font-size:inherit !important; display: inline-block; }
+</style>
 
 <nav class="navbar navbar-dark bg-dark" aria-label="primary">
   <a class="navbar-brand" href="index.html">
@@ -16,7 +20,7 @@
       alt="seal of the Executive Office of the President"
       loading="lazy"
     />
-    Rule Builder
+    <h1 class="site-header">Rule Builder</h1>
   </a>
 
   <div>
