--- a/test-rule.html
+++ b/test-rule.html
@@ -16,20 +16,20 @@
       crossorigin="anonymous"
     />
 
-    <title>Test Rule Results | Rule Builder | EOP</title>
+    <title>Test Rule | Rule Builder | EOP</title>
     <style>
       /* BS Overrides */
-            /* font ramp adjust */
-            label { 
-        font-size: .88rem;
-        margin-bottom: .25rem;
+      /* font ramp adjust */
+      label {
+        font-size: 0.88rem;
+        margin-bottom: 0.25rem;
       }
       a {
-        font-size: .88rem;
+        font-size: 0.88rem;
         color: #3673a3;
       }
       /* end font ramp adjust */
-    
+
       .btn-primary {
         background-color: #3673a3;
         border-color: #3673a3;
@@ -54,10 +54,61 @@
         color: #000;
         text-decoration: none;
       }
+
+      /* ---------------------------------------
+   Skip Links
+   --------------------------------------- */
+
+      .sr-only.focusable:focus {
+        position: static !important;
+        clip: auto;
+        overflow: visible;
+        height: auto;
+      }
+
+      .nav-skip-links {
+        position: fixed !important;
+        left: 20%;
+        top: 0;
+        width: 30rem;
+        border-radius: 4px;
+        z-index: 3000;
+      }
+      .nav-skip-links a {
+        display: block;
+        padding: 5px;
+        border: 1px solid #000;
+        border-radius: 4px;
+        background: #3673a3;
+        color: #fff;
+        text-align: center;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+          0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      }
+      .nav-skip-links a:hover,
+      .nav-skip-links a:focus,
+      .nav-skip-links a:active {
+        color: #fff;
+        text-decoration: none;
+      }
+      .nav-skip-links a:hover {
+        background-color: #007bff;
+      }
+      .nav-skip-links .focusable:focus {
+        width: 30rem;
+      }
     </style>
   </head>
   <body>
     <!-- skip links go here -->
+    <nav class="nav-skip-links" aria-label="Skip Links">
+      <a class="sr-only focusable" id="a-skiplink-main" href="#main-content"
+        >Skip to main content</a
+      >
+      <a class="sr-only focusable" id="a-skiplink-footer" href="#site-footer"
+        >Skip to footer</a
+      >
+    </nav>
 
     <h1 class="sr-only">Rule Builder</h1>
 
@@ -106,7 +157,7 @@
                 </div>
                 <div class="col-auto">
                   <button type="submit" class="btn btn-primary mb-3">
-                    Test 
+                    Test
                   </button>
                 </div>
               </div>
@@ -120,8 +171,9 @@
                     class="form-control is-invalid"
                     id="resultsTextarea1"
                     rows="4"
+                    aria-describedby="err-1"
                   ></textarea>
-                  <div class="invalid-feedback">
+                  <div class="invalid-feedback" id="err-1">
                     Demo of error message.
                   </div>
                 </div>
@@ -142,6 +194,8 @@
         </div>
       </div>
     </div>
+      <!-- @Developer: replace object tag with proper include file -->
+      <object data="footer-site.html" width="100%"></object>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
