--- a/edit-rule.html
+++ b/edit-rule.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Rule Builder | EOP</title>
+    <title>Edit Rule | Rule Builder | EOP</title>
 
     <style>
       /* BS Overrides */
@@ -50,6 +50,17 @@
       .btn-outline-primary.bg-white:hover {
         background-color: #007bff !important;
       }
+      .btn {
+        margin-bottom: 0.25rem;
+      }
+      @media (min-width: 768px) {
+        .btn {
+          margin-bottom: 0;
+        }
+      }
+
+      .site-header { font-size:inherit !important; display: inline-block; }
+
       .table-rule-definitions tbody tr td:nth-child(3) {
         width: 100%;
       }
@@ -60,6 +71,7 @@
         min-width: 9rem;
         text-align: right;
       }
+     
       .icon {
         background-repeat: no-repeat;
         background-position: center;
@@ -134,8 +146,57 @@
       }
 
       .form-row--compressed .form-control {
-        padding-left:0; 
-        padding-right:0;
+        padding-left: 0;
+        padding-right: 0;
+      }
+
+      @media (min-width: 768px) {
+        .row-sort-btns {
+          max-width: 1.2rem;
+        }
+      }
+
+      /* ---------------------------------------
+   Skip Links
+   --------------------------------------- */
+
+      .sr-only.focusable:focus {
+        position: static !important;
+        clip: auto;
+        overflow: visible;
+        height: auto;
+      }
+
+      .nav-skip-links {
+        position: fixed !important;
+        left: 20%;
+        top: 0;
+        width: 30rem;
+        border-radius: 4px;
+        z-index: 3000;
+      }
+      .nav-skip-links a {
+        display: block;
+        padding: 5px;
+        border: 1px solid #000;
+        border-radius: 4px;
+        background: #3673a3;
+        color: #fff;
+        text-align: center;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+          0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      }
+      .nav-skip-links a:hover,
+      .nav-skip-links a:focus,
+      .nav-skip-links a:active {
+        color: #fff;
+        text-decoration: none;
+      }
+      .nav-skip-links a:hover {
+        background-color: #007bff;
+      }
+      .nav-skip-links .focusable:focus {
+        width: 30rem;
       }
     </style>
   </head>
@@ -164,7 +225,7 @@
           alt="seal of the Executive Office of the President"
           loading="lazy"
         />
-        Rule Builder
+        <h1 class="site-header">Rule Builder</h1>
       </a>
 
       <div>
@@ -271,7 +332,7 @@
 
               <div class="form-group col">
                 <label for="a11-ref-1"
-                  >A-11&nbsp;Reference
+                  >A-11 Reference
                   <span class="sr-only">(Enter first part)</span></label
                 >
                 <input type="text" class="form-control" id="a11-ref-1" />
@@ -620,9 +681,13 @@
               <tbody>
                 <tr>
                   <td>
-                    <div class="row no-gutters" style="max-width: 1.2rem;">
-                      <button class="col-auto icon icon-arrow-up"></button>
-                      <button class="col-auto icon icon-arrow-down"></button>
+                    <div class="row no-gutters row-sort-btns">
+                      <button class="col-auto icon icon-arrow-up">
+                        <span class="sr-only">Move this row up</span>
+                      </button>
+                      <button class="col-auto icon icon-arrow-down">
+                        <span class="sr-only">Move this row down</span>
+                      </button>
                     </div>
                   </td>
                   <td><span>1</span></td>
@@ -635,9 +700,13 @@
                 </tr>
                 <tr>
                   <td>
-                    <div class="row no-gutters" style="max-width: 1.2rem;">
-                      <button class="col-auto icon icon-arrow-up"></button>
-                      <button class="col-auto icon icon-arrow-down"></button>
+                    <div class="row no-gutters row-sort-btns">
+                      <button class="col-auto icon icon-arrow-up">
+                        <span class="sr-only">Move this row up</span>
+                      </button>
+                      <button class="col-auto icon icon-arrow-down">
+                        <span class="sr-only">Move this row down</span>
+                      </button>
                     </div>
                   </td>
                   <td><span>2</span></td>
@@ -650,9 +719,13 @@
                 </tr>
                 <tr>
                   <td>
-                    <div class="row no-gutters" style="max-width: 1.2rem;">
-                      <button class="col-auto icon icon-arrow-up"></button>
-                      <button class="col-auto icon icon-arrow-down"></button>
+                    <div class="row no-gutters row-sort-btns">
+                      <button class="col-auto icon icon-arrow-up">
+                        <span class="sr-only">Move this row up</span>
+                      </button>
+                      <button class="col-auto icon icon-arrow-down">
+                        <span class="sr-only">Move this row down</span>
+                      </button>
                     </div>
                   </td>
                   <td><span>3</span></td>
@@ -662,7 +735,7 @@
                         <select
                           id="inputState"
                           class="form-control"
-                          aria-label="{{Add_Label_Here}}"
+                          aria-label="{-Add_Label_Here-}"
                         >
                           <option selected>Lock amounts</option>
                           <option>...</option>
@@ -673,7 +746,7 @@
                         <select
                           id="inputState"
                           class="form-control"
-                          aria-label="{{Add_Label_Here}}"
+                          aria-label="{-Add_Label_Here-}"
                         >
                           <option selected>PY-1</option>
                           <option>...</option>
@@ -688,7 +761,7 @@
                         <select
                           id="inputState"
                           class="form-control"
-                          aria-label="{{Add_Label_Here}}"
+                          aria-label="{-Add_Label_Here-}"
                         >
                           <option selected>BY+9</option>
                           <option>...</option>
@@ -710,9 +783,13 @@
 
                 <tr>
                   <td>
-                    <div class="row no-gutters" style="max-width: 1.2rem;">
-                      <button class="col-auto icon icon-arrow-up"></button>
-                      <button class="col-auto icon icon-arrow-down"></button>
+                    <div class="row no-gutters row-sort-btns">
+                      <button class="col-auto icon icon-arrow-up">
+                        <span class="sr-only">Move this row up</span>
+                      </button>
+                      <button class="col-auto icon icon-arrow-down">
+                        <span class="sr-only">Move this row down</span>
+                      </button>
                     </div>
                   </td>
                   <td><span>4</span></td>
@@ -765,12 +842,12 @@
           <div class="form-group col-md-1">
             <h5 class="col-form-label col-form-label-sm">Account</h5>
           </div>
-          <!-- @Developer: we need to add screen reader labels to these fields: {{Add_Label_Here}} -->
+          <!-- @Developer: we need to add screen reader labels to these fields: {-Add_Label_Here-} -->
           <div class="form-group col-md-2">
             <select
               class="form-control form-control-sm"
               aria-labelid="account1"
-              ="{{Add_Label_Here}}"
+              ="{-Add_Label_Here-}"
             >
               <option selected>Select concept</option>
               <option>{{concept_1}}</option>
@@ -791,7 +868,7 @@
               type="text"
               class="form-control form-control-sm"
               id="account3"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             />
           </div>
           <div class="col form-group text-right">
@@ -809,7 +886,7 @@
             <select
               id="line1"
               class="form-control form-control-sm"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             >
               <option selected>Select concept</option>
               <option>...</option>
@@ -819,7 +896,7 @@
             <select
               id="line2"
               class="form-control form-control-sm"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             >
               <option selected>Select</option>
               <option>...</option>
@@ -830,7 +907,7 @@
               type="text"
               class="form-control form-control-sm"
               id="line3"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             />
           </div>
           <div class="col form-group text-right">
@@ -841,7 +918,9 @@
         </section>
 
         <!-- ROW --------------------------------------- -->
-        <section class="form-row form-row--compressed align-items-center no-gutters">
+        <section
+          class="form-row form-row--compressed align-items-center no-gutters"
+        >
           <div class="form-group col-md-1">
             <h5 class="col-form-label col-form-label-sm">
               Math
@@ -851,7 +930,7 @@
             <select
               id="math1"
               class="form-control form-control-sm"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             >
               <option>Operation</option>
               <option>...</option>
@@ -861,7 +940,7 @@
             <select
               id="math2"
               class="form-control form-control-sm"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             >
               <option selected>Var</option>
               <option>Total-1</option>
@@ -878,7 +957,7 @@
             <select
               id="math3"
               class="form-control form-control-sm"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             >
               <option selected>Col</option>
               <option>col 1</option>
@@ -893,7 +972,7 @@
               type="text"
               class="form-control form-control-sm"
               id="math4"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
               value="1"
               aria-describedby="helptext1"
             />
@@ -917,7 +996,7 @@
             <select
               id="math6"
               class="form-control form-control-sm"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             >
               <option selected>Year</option>
               <option>PY-1</option>
@@ -969,7 +1048,7 @@
             <select
               id="inputState"
               class="form-control form-control-sm"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             >
               <option selected>Option</option>
               <option>(positive amts only)</option>
@@ -992,7 +1071,7 @@
             <select
               id="control1"
               class="form-control form-control-sm"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             >
               <option selected>Select value</option>
               <option>...</option>
@@ -1041,7 +1120,7 @@
             <select
               id="evaluate3"
               class="form-control form-control-sm"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             >
               <option selected>Select</option>
               <option>...</option>
@@ -1068,7 +1147,7 @@
             <select
               id="evaluate5"
               class="form-control form-control-sm"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             >
               <option selected>To</option>
               <option>col 1</option>
@@ -1080,7 +1159,7 @@
             <select
               id="evaluate6"
               class="form-control form-control-sm"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             >
               <option selected>Select</option>
               <option>equal</option>
@@ -1095,7 +1174,7 @@
               type="text"
               class="form-control form-control-sm"
               id="evaluate7"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             />
           </div>
 
@@ -1143,7 +1222,7 @@
             <select
               id="compare1"
               class="form-control form-control-sm"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             >
               <option selected>Select</option>
               <option>These Amounts</option>
@@ -1173,7 +1252,7 @@
             <select
               id="compare3"
               class="form-control form-control-sm"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             >
               <option selected>To</option>
               <option>col 1</option>
@@ -1186,7 +1265,7 @@
             <select
               id="compare4"
               class="form-control form-control-sm"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             >
               <option selected>Select</option>
               <option>equal</option>
@@ -1198,7 +1277,7 @@
             <select
               id="compare5"
               class="form-control form-control-sm"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             >
               <option selected>Select</option>
               <option>Total-1</option>
@@ -1227,7 +1306,7 @@
             <select
               id="compare7"
               class="form-control form-control-sm"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             >
               <option selected>To</option>
               <option>col 1</option>
@@ -1264,7 +1343,7 @@
             <select
               id="editOpt1"
               class="form-control form-control-sm"
-              aria-label="{{Add_Label_Here}}"
+              aria-label="{-Add_Label_Here-}"
             >
               <option selected>Select value</option>
               <option>...</option>
@@ -1279,7 +1358,7 @@
         </section>
         <!-- /end ROW --------------------------------------- -->
       </div>
-
+<!-- @Developer: replace object tag with proper include file -->
       <object data="footer-site.html" width="100%"></object>
     </div>
 
