--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ a { color: #3673A3; }
                 <td></td>
               </tr>
               <tr>
-                <th scope="row"><a href="create-rule.html">Create Rule</a></th>
+                <th scope="row"><i>Create Rule</i></th>
                 <td>Blank <i>(see Edit Rule)</i></td>
               </tr>
               <tr>
