--- a/edit-rule.html
+++ b/edit-rule.html
@@ -695,7 +695,7 @@
                   <td>151 lines</td>
                   <td>
                     <button class="btn btn-link">Edit</button
-                    ><button class="btn btn-link">Delete</button>
+                    ><button class="btn btn-link" data-toggle="modal" data-target="#deleteModal" data-whatever="Transmit [TRANSMIT] equal...">Delete</button>
                   </td>
                 </tr>
                 <tr>
@@ -714,7 +714,7 @@
                   <td>151 lines</td>
                   <td>
                     <button class="btn btn-link">Edit</button
-                    ><button class="btn btn-link">Delete</button>
+                    ><button class="btn btn-link" data-toggle="modal" data-target="#deleteModal" data-whatever="Transmit [TRANSMIT] equal...">Delete</button>
                   </td>
                 </tr>
                 <tr>
@@ -776,7 +776,7 @@
                       <button class="btn btn-outline-primary bg-white mr-1">
                         Cancel
                       </button>
-                      <button class="btn btn-link">Delete</button>
+                      <button class="btn btn-link" data-toggle="modal" data-target="#deleteModal" data-whatever="Lock amounts...">Delete</button>
                     </div>
                   </td>
                 </tr>
@@ -797,7 +797,7 @@
                   <td>151 lines</td>
                   <td>
                     <button class="btn btn-link">Edit</button
-                    ><button class="btn btn-link">Delete</button>
+                    ><button class="btn btn-link" data-toggle="modal" data-target="#deleteModal"  data-whatever="Transmit [TRANSMIT] equal...">Delete</button>
                   </td>
                 </tr>
               </tbody>
@@ -1358,6 +1358,30 @@
         </section>
         <!-- /end ROW --------------------------------------- -->
       </div>
+
+<!-- @Developer - separate into modal component -->
+<div id="deleteModal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Delete</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you want to delete this rule definition<span id="text-inserted"></span>?</p>
+        
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- @Developer: replace object tag with proper include file -->
       <object data="footer-site.html" width="100%"></object>
     </div>
@@ -1379,5 +1403,17 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
+    <script>
+
+      $('#deleteModal').on('show.bs.modal', function (event) {
+  var button = $(event.relatedTarget) // Button that triggered the modal
+  var recipient = button.data('whatever') // Extract info from data-* attributes
+  // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
+  // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
+  var modal = $(this)
+  modal.find('.modal-title').text('Confirm Deletion')
+  modal.find('#text-inserted').text(': '+recipient);
+})
+    </script>
   </body>
 </html>
