added drop-up component in edit-rule table, moved form fields out of sticky bottom

--- a/header-site.html
+++ b/header-site.html
@@ -8,6 +8,7 @@
 <!-- @Developer: add this style to header component -->
 <style>
   .site-header { font-size:inherit !important; display: inline-block; }
+  .navbar-dark.bg-dark {background-color: #293340 !important;}
 </style>
 
 <nav class="navbar navbar-dark bg-dark" aria-label="primary">
