--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@ a { color: #3673A3; }
                 <td></td>
               </tr>
               <tr>
-                <th scope="row"><a href="drag-drop-list.html">DEMO: Drag &amp; drop (list)</a></th>
+                <th scope="row"><a href="drag-drop-list.html">Sample: Drag &amp; drop (list)</a></th>
                 <td>JavaScript testing</td>
               </tr>
               <tr>
-                <th scope="row"><a href="drag-drop-table.html">DEMO: Drag &amp; drop (table)</a></th>
+                <th scope="row"><a href="drag-drop-table.html">Sample: Drag &amp; drop (table)</a></th>
                 <td>JavaScript testing</td>
               </tr>
               <tr>
-                <th scope="row"><a href="drag-drop-table-2.html">DEMO: Drag &amp; drop (table/jQuery-UI)</a></th>
+                <th scope="row"><a href="drag-drop-table-2.html">Sample: Drag &amp; drop (table/jQuery-UI)</a></th>
                 <td>JavaScript testing</td>
               </tr>
               
