--- a/test-rule.html
+++ b/test-rule.html
@@ -134,9 +134,10 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="col">
-          <main id="main-content">
+      <main id="main-content">
+        <div class="row">
+          <div class="col">
+            <!--  <main id="main-content"> -->
             <form>
               <div class="form-row align-items-end">
                 <div class="form-group col-md-2">
@@ -190,20 +191,19 @@
                 </div>
               </div>
             </form>
-          </main>
+          </div>
         </div>
-      </div>
+      </main>
     </div>
-      <!-- @Developer: replace object tag with proper include file -->
-      <object data="footer-site.html" width="100%"></object>
+    <!-- @Developer: replace object tag with proper component -->
+    <object data="footer-site.html" width="100%"></object>
 
-    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"
+  ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
