added Excluded Users and Groups box, removed styles from files into new file: styles.css

--- a/header-site.html
+++ b/header-site.html
@@ -11,6 +11,15 @@
   .navbar-dark.bg-dark {background-color: #293340 !important;}
 </style>
 
+    <!-- skip links go here -->
+    <nav class="nav-skip-links" aria-label="Skip Links">
+      <a class="sr-only focusable" id="a-skiplink-main" href="#main-content"
+        >Skip to main content</a
+      >
+    </nav>
+
+    <h1 class="sr-only">Rule Builder</h1>
+
 <nav class="navbar navbar-dark bg-dark" aria-label="primary">
   <a class="navbar-brand" href="index.html">
     <img
