--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@ a { color: #3673A3; }
     </style>
   </head>
   <body>
-    <!-- skip links go here -->
 
-    <h1 class="sr-only">Rule Builder</h1>
 
-    <object data="header-site.html" width="100%" height="100%"></object>
+    <!--#include file="header-site.html" -->
 
     <div class="container">
       <div class="row">
@@ -103,6 +101,7 @@ a { color: #3673A3; }
         </div>
       </div>
     </div>
+    <!--#include file="footer-site.html" -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
